--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     <header class="jumbotron">
       <h1 class="display-3">Work Day Scheduler</h1>
       <p class="lead">A simple calendar app for scheduling your work day</p>
+      <!-- Added JS function to display date and time using id currentDay -->
       <p id="currentDay" class="lead"></p>
     </header>
     <div class="container">
@@ -35,5 +36,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="lib\moment\moment.min.js"></script>
     <script src="script.js"></script>
+
   </body>
 </html>
