--- a/index.html
+++ b/index.html
@@ -31,6 +31,76 @@
     </header>
     <div class="container">
       <!-- Timeblocks go here -->
+      <div id="hour7" class="row time-block">
+        <div class="col-md-1 hour">7:00 AM</div>
+        <textarea class="col-md-10 project"></textarea>
+        <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
+      </div>
+      <div id="hour8" class="row time-block">
+        <div class="col-md-1 hour">8:00 AM</div>
+        <textarea class="col-md-10 project"></textarea>
+        <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
+      </div>
+      <div id="hour9" class="row time-block">
+        <div class="col-md-1 hour">9:00 AM</div>
+        <textarea class="col-md-10 project"></textarea>
+        <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
+      </div>
+      <div id="hour10" class="row time-block">
+        <div class="col-md-1 hour">10:00 AM</div>
+        <textarea class="col-md-10 project"></textarea>
+        <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
+      </div>
+      <div id="hour11" class="row time-block">
+        <div class="col-md-1 hour">11:00 AM</div>
+        <textarea class="col-md-10 project"></textarea>
+        <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
+      </div>
+      <div id="hour12" class="row time-block">
+        <div class="col-md-1 hour">12:00 PM</div>
+        <textarea class="col-md-10 project"></textarea>
+        <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
+      </div>
+      <div id="hour13" class="row time-block">
+        <div class="col-md-1 hour">1:00 PM</div>
+        <textarea class="col-md-10 project"></textarea>
+        <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
+      </div>
+      <div id="hour14" class="row time-block">
+        <div class="col-md-1 hour">2:00 PM</div>
+        <textarea class="col-md-10 project"></textarea>
+        <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
+      </div>
+      <div id="hour15" class="row time-block">
+        <div class="col-md-1 hour">3:00 PM</div>
+        <textarea class="col-md-10 project"></textarea>
+        <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
+      </div>
+      <div id="hour16" class="row time-block">
+        <div class="col-md-1 hour">4:00 PM</div>
+        <textarea class="col-md-10 project"></textarea>
+        <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
+      </div>
+      <div id="hour17" class="row time-block">
+        <div class="col-md-1 hour">5:00 PM</div>
+        <textarea class="col-md-10 project"></textarea>
+        <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
+      </div>
+      <div id="hour18" class="row time-block">
+        <div class="col-md-1 hour">6:00 PM</div>
+        <textarea class="col-md-10 project"></textarea>
+        <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
+      </div>
+      <div id="hour19" class="row time-block">
+        <div class="col-md-1 hour">7:00 PM</div>
+        <textarea class="col-md-10 project"></textarea>
+        <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
+      </div>
+      
+
+    </div>
+      
+
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
